# aliyun-openapi-core-rust-sdk

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: ecs.rs  log_service.rs  nlp.rs  rds.rs  ros.rs  sc.rs  slb.rs  sls.rs  vpc.rs
src/: lib.rs  roa.rs  rpc.rs
src/client/: error.rs  log_service.rs  mod.rs  roa.rs  rpc.rs
tests/: compatibility.rs  roa_client_tests.rs  rpc_client_tests.rs  tests.rs
