[package]
name = "aliyun-openapi-core-rust-sdk"
description = "Aliyun OpenAPI POP core SDK for Rust"
version = "0.4.0"
keywords = ["aliyun", "openapi", "api", "sdk"]
categories = ["api-bindings"]
authors = ["mc404 <antix.blue@antix.blue>"]
license = "MIT"
documentation = "https://docs.rs/aliyun-openapi-core-rust-sdk"
repository = "https://github.com/r4ntix/aliyun-openapi-core-rust-sdk"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.30"
base64 = "0.12.1"
chrono = "0.4.11"
reqwest = { version = "0.10.4", features = ["blocking"] }
rust-crypto = "0.2.36"
url = "2.1.1"

[dev-dependencies]
serde_json = "1.0.53"
