[package]
name = "aliyun-openapi-core-rust-sdk"
description = "Aliyun OpenAPI POP core SDK for Rust"
version = "1.0.0"
keywords = ["aliyun", "openapi", "api", "sdk"]
categories = ["api-bindings"]
authors = ["r4ntix <r.4ntix@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/aliyun-openapi-core-rust-sdk"
repository = "https://github.com/r4ntix/aliyun-openapi-core-rust-sdk"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.30"
async-trait = "0.1"
base16ct = { version = "0.1", features = ["std"] }
base64 = "0.12.1"
chrono = "0.4.11"
futures = "0.3"
hmac = "0.12"
md-5 = "0.10"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
url = "2.1.1"
